--- a/public/css/carrito.css
+++ b/public/css/carrito.css
@@ -1,20 +1,11 @@
-/*************** Header ***************/
-header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.logo{
-    width: 70%;
-    margin: -30px;
-}
-
 /*************** Body ***************/
-body{
-    margin:10px;
-}
+
 .return{
     padding: 20px;
+}
+.return a{
+    color: #80083F;
+    text-decoration: none;
 }
 .wine{
     width:100px;
@@ -75,7 +66,7 @@ body{
     width: -webkit-fill-available;
 }
 .pay-button{
-    background: purple;
+    background: #80083F;
     color: white;
     padding: 5px 35px;
     border-radius: 10px;
@@ -108,6 +99,7 @@ body{
     flex-wrap: wrap;
     justify-content: space-between;
     justify-content: center;
+    padding: 20px 5px;
 
 }
 .column{
