--- a/src/views/products/carrito.ejs
+++ b/src/views/products/carrito.ejs
@@ -1,39 +1,6 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>miVinoteca</title>
-
-    <!-- Las siguientes 3 lineas las copie de google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@300&family=Poppins:wght@200&family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <!-- Las siguientes 3 lineas las copie de google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@700&family=Roboto:wght@700&display=swap" rel="stylesheet">
-    <!-- Link de icons -->
-    <script src="https://kit.fontawesome.com/742f33a9bc.js" crossorigin="anonymous"></script>
-    <!-- Vinculo el archivo normalize que sirve para que la pagina se vea siempre bien -->
-    <link rel="stylesheet" href="/css/normalize.css">
-    <!-- Recomiendan estas hojas ultimas -->
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/carrito.css">
-</head>
+<%- include("../partials/head.ejs") %> 
 <body>
-    <header>
-        <div class="menu">
-            <i class="fa-solid fa-bars"></i>
-        </div>
-        <div class="imagen">
-            <a href="/"><img class="logo" src="/images/logo-winehouse.png" alt="WineHouse"></a>
-        </div>
-        <div class="carrito">
-            <i class="fa-solid fa-cart-shopping"></i>
-        </div>
-    </header>
+    <%- include("../partials/header.ejs") %>
     <main>
         <div class="return">
             <a href="/"><i class="fa-solid fa-angle-left"></i> Volver</a>
@@ -44,7 +11,7 @@
                 <div class="price">$1.750</div>
                 <div class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                     Doloribus possimus itaque esse neque laudantium eos beatae iste, molestiae, ipsam facilis nemo vero animi assumenda.
-                </div>
+                </div>    
             </div>
             <div class="bottom-product-box">
                 <div class="box-cantidad-delete">
@@ -59,30 +26,29 @@
         </div>
         <div class="box-desktop">
             <div class="box-list">
-                    <div class="column">
-                        <div class="box-title">Producto</div>
-                        <img class="wine" src="/images/Serbal-Pinot Noir.jpeg" alt="WineHouse">
-                    </div>
-                    <div class="column-special">Serbal Pinot Noir 750cc</div>
-                    <div class="column">
-                        <div class="box-title">Precio unitario</div>
-                        <div class="column-middle">$1.750</div>
-                    </div>
-                    <div class="column">
-                        <div class="box-title">Precio cantidad</div>
-                        <div class="column-middle"><i class="fa-solid fa-minus"></i> 2 <i class="fa-solid fa-plus"></i></div>
-                    </div>
-                    <div class="column">
-                        <div class="box-title">Subtotal</div>
-                        <div class="column-middle">$3.500</div>
-                    </div>
-                    <div class="column-special">
-                        <i class="fa-solid fa-trash-can"></i>
-                    </div>
+                <div class="column">
+                    <div class="box-title">Producto</div>
+                    <img class="wine" src="/images/Serbal-Pinot Noir.jpeg" alt="WineHouse">
+                </div>
+                <div class="column-special">Serbal Pinot Noir 750cc</div>
+                <div class="column">
+                    <div class="box-title">Precio unitario</div>
+                    <div class="column-middle">$1.750</div>
+                </div>
+                <div class="column">
+                    <div class="box-title">Precio cantidad</div>
+                    <div class="column-middle"><i class="fa-solid fa-minus"></i> 2 <i class="fa-solid fa-plus"></i></div>
+                </div>
+                <div class="column">
+                    <div class="box-title">Subtotal</div>
+                    <div class="column-middle">$3.500</div>
+                </div>
+                <div class="column-special">
+                    <i class="fa-solid fa-trash-can"></i>
+                </div>
                 <div class="line"></div>
                 <div class="line"></div>
             </div>
-
             <div class="box-compra">
                 <div class="title">Resumen de compra</div>
                 <div class="sub-title">
@@ -95,10 +61,7 @@
                     <i class="fa-solid fa-angle-left"></i>   seguir comprando
                 </div>   
             </div>
-            
         </div>
     </main>
-    <footer>
-
-    </footer>
+    <%- include("../partials/footer.ejs") %>
 </body>
