--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -20,4 +20,5 @@
   <link rel="stylesheet" href="/css/header.css"/>
   <link rel="stylesheet" href="/css/footer.css"/>
   <link rel="stylesheet" href="/css/carrito.css"/>
+  <link rel="stylesheet" href="/css/detalles.css"/>
 </head>
