agregue rutas y controlador users

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -39,7 +39,7 @@
             </div>
         </form>
         <div class="icons-desktop">
-            <a class="link" href="/registro"><i class="fa-solid fa-user"></i></a>
+            <a class="link" href="/users/registro"><i class="fa-solid fa-user"></i></a>
         </div>
             <div class="icons-desktop"><a href="/carrito"><i class="fa-solid fa-cart-shopping"></i></a></i></div>
   </header>
