--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -45,9 +45,9 @@
                     <input type="checkbox">
                     <p>Recordame</p></div>
                 <div class="letra-chica">
-                    <div><a class="pregunta" href="/password">¿Olvidaste tu contraseña?</a></div>
+                    <div><a class="pregunta" href="/users/password">¿Olvidaste tu contraseña?</a></div>
                     <div class="cuenta">¿No tenes cuenta?</div>
-                    <div><a class="link" href="/registro">Registrate</a></div>
+                    <div><a class="link" href="/users/registro">Registrate</a></div>
                 </div>
             </div>
         </section>
