--- a/src/views/users/registro.ejs
+++ b/src/views/users/registro.ejs
@@ -48,7 +48,7 @@
                     </form>
                 <div class="letra-chica">
                     <div class="pregunta">Ya eres miembro?</div>
-                    <div><a class="link" href="/login">Inicia sesión</a></div>
+                    <div><a class="link" href="/users/login">Inicia sesión</a></div>
                 </div>
             </div>
         </section>
