acomode rutas y controladores

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header>
     <div class="logo">
-        <a href="/"><img src="images/logo-winehouse.png" alt="Logo" class="product_img"/></a>
+        <a href="/"><img src="/images/logo-winehouse.png" alt="Logo" class="product_img"/></a>
     </div>
     <div class="phone-register-button">
         <a class="link" href="/registro">Registrarse - Iniciar sesión</a>
