--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -21,4 +21,5 @@
   <link rel="stylesheet" href="/css/footer.css"/>
   <link rel="stylesheet" href="/css/carrito.css"/>
   <link rel="stylesheet" href="/css/detalles.css"/>
+  <link rel="stylesheet" href="/css/products.css"/>
 </head>
