--- a/src/views/products/crear-producto.ejs
+++ b/src/views/products/crear-producto.ejs
@@ -9,7 +9,76 @@
 
     <main>
 
-        
+        <div>
+
+            <div>
+
+                <h2>Formulario de creación de productos</h2>
+
+            </div>
+
+            <div>
+
+                <form action="/products/" method="POST" enctype="multipart/form-data">
+
+                    <div>
+
+                        <div>
+                            <label for="name" class="form-label">Nombre del producto:</label>
+                            <input type="text" id="name" name="name" placeholder="Ej: Luigi Bosca Pinot Noir" class="form-input">
+                        </div>
+
+                        <div>
+                            <label for="price" class="form-label">Precio:</label>
+                            <input type="text" id="price" name="price" placeholder="Ej: 222" class="form-input">
+                        </div>
+
+                        <div>
+                            <label for="discount" class="form-label">Descuento:</label>
+                            <input type="text" id="discount" name="discount" placeholder="Ej: 15" class="form-input">
+                        </div>
+
+                        <div>
+                            <label for="size" class="form-label">Tamaño:</label>
+                            <input type="text" id="size" name="size" placeholder="Ej: 750" class="form-input">
+                        </div>
+
+                        <div>
+                            <label for="bodega" class="form-label">Bodega:</label>
+                            <input type="text" id="bodega" name="bodega" placeholder="Ej: Luigi Bosca" class="form-input">
+                        </div>
+
+                        <div>
+                            <label for="provincia" class="form-label">Provincia:</label>
+                            <input type="text" id="provincia" name="provincia" placeholder="Ej: Mendoza" class="form-input">
+                        </div>
+
+                        <div>
+                            <label for="" class="form-label">Categoría:</label>
+                            <input type="" id="" name="" placeholder="" class="form-input">
+                        </div>
+
+                        <div>
+                            <label for="descripcion" class="form-label">Descripción:</label>
+                            <textarea id="descripcion" name="descripcion" placeholder="Descripción del producto" class="form-input"></textarea>
+                        </div>
+
+                        <div>
+                            <label for="image" class="form-label">Imagen del producto:</label>
+                            <input type="file" id="image" name="image" class="form-input">
+                        </div>
+
+                        <div>
+                            <button type="submit" class="boton-crear">Crear producto</button>
+                        </div>
+
+                    </div>
+
+                </form>
+
+            </div>
+
+        </div>
 
     </main>
 
