armando el registro

--- a/src/views/users/registro.ejs
+++ b/src/views/users/registro.ejs
@@ -29,7 +29,7 @@
     <main>
         <section class="cuadro">
             <div class="saludo-logo">Registrarse</div>
-            <form method="get" action="/">
+            <form method="POST" action="/users/registro">
                 <div class="register">
                     <div>
                         <input class="box-info-user" type="text" name="nombre" placeholder="Nombre" required minlength="3">
