--- a/public/css/registro.css
+++ b/public/css/registro.css
@@ -47,6 +47,12 @@ body {
     flex-direction: column;
     align-items: center;
 }
+.text-danger{
+    color: red;
+    position: relative;
+    bottom: 27px;
+    font-size: 13px;
+}
 .box-info-user{
     font-size: 18px;
     margin: auto;
