creacion de productos terminada, carpeta de imagenes de productos y vistas acomodadas

--- a/src/views/products/carrito.ejs
+++ b/src/views/products/carrito.ejs
@@ -7,7 +7,7 @@
         </div>
         <div class="box-product">
             <div class="box-img-price-description">
-                <img class="wine" src="/images/Serbal-Pinot Noir.jpeg" alt="WineHouse">
+                <img class="wine" src="/images/productImages/Serbal-Pinot Noir.jpeg" alt="WineHouse">
                 <div class="price">$1.750</div>
                 <div class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                     Doloribus possimus itaque esse neque laudantium eos beatae iste, molestiae, ipsam facilis nemo vero animi assumenda.
@@ -28,7 +28,7 @@
             <div class="box-list">
                 <div class="column">
                     <div class="box-title">Producto</div>
-                    <img class="wine" src="/images/Serbal-Pinot Noir.jpeg" alt="WineHouse">
+                    <img class="wine" src="/images/productImages/Serbal-Pinot Noir.jpeg" alt="WineHouse">
                 </div>
                 <div class="column-special">Serbal Pinot Noir 750cc</div>
                 <div class="column">
