--- a/src/views/products/detalles.ejs
+++ b/src/views/products/detalles.ejs
@@ -33,7 +33,7 @@
                             <div class="carrusel">
 
                                 <div class="contenedor-imagen-carrusel">
-                                    <img class="imagen-principal imagenes-producto" src="/images/vino1.jpg" alt="Vino elementos malbec">
+                                    <img class="imagen-principal imagenes-producto" src="/images/productImages/vino1.jpg" alt="Vino elementos malbec">
                                 </div>
 
                             </div>
@@ -43,15 +43,15 @@
                                 <div class="miniaturas-img">
                                     
                                     <div class="mini">
-                                        <img class="imagenes-producto" src="/images/vino1.jpg" alt="Vino elementos malbec">
+                                        <img class="imagenes-producto" src="/images/productImages/vino1.jpg" alt="Vino elementos malbec">
                                     </div>
 
                                     <div class="mini">
-                                        <img class="imagenes-producto" src="/images/vino2.jpg" alt="Pack de seis vinos elementos">
+                                        <img class="imagenes-producto" src="/images/productImages/vino2.jpg" alt="Pack de seis vinos elementos">
                                     </div>
 
                                     <div class="mini">
-                                        <img class="imagenes-producto" src="/images/vino3.jpg" alt="Pack vino, copa y caja">
+                                        <img class="imagenes-producto" src="/images/productImages/vino3.jpg" alt="Pack vino, copa y caja">
                                     </div>
                                 
                                 </div>
@@ -149,7 +149,7 @@
                                     <div>
 
                                         <div>
-                                            <img src="/images/vino2.jpg" alt="Producto relacionado 1" class="imagenes-relacionados relacionado-1">
+                                            <img src="/images/productImages/vino2.jpg" alt="Producto relacionado 1" class="imagenes-relacionados relacionado-1">
                                         </div>
 
                                     </div>
@@ -177,7 +177,7 @@
                                     <div>
 
                                         <div>
-                                            <img src="/images/vino2.jpg" alt="Producto relacionado 2" class="imagenes-relacionados relacionado-2">
+                                            <img src="/images/productImages/vino2.jpg" alt="Producto relacionado 2" class="imagenes-relacionados relacionado-2">
                                         </div>
 
                                     </div>
@@ -205,7 +205,7 @@
                                     <div>
 
                                         <div>
-                                            <img src="/images/vino2.jpg" alt="Producto relacionado 3" class="imagenes-relacionados relacionado-3">
+                                            <img src="/images/productImages/vino2.jpg" alt="Producto relacionado 3" class="imagenes-relacionados relacionado-3">
                                         </div>
 
                                     </div>
@@ -233,7 +233,7 @@
                                     <div>
 
                                         <div>
-                                            <img src="/images/vino2.jpg" alt="Producto relacionado 4" class="imagenes-relacionados relacionado-4">
+                                            <img src="/images/productImages/vino2.jpg" alt="Producto relacionado 4" class="imagenes-relacionados relacionado-4">
                                         </div>
 
                                     </div>
