--- a/src/views/products/index.ejs
+++ b/src/views/products/index.ejs
@@ -5,7 +5,7 @@
     <main>
       <div class="products">
         <article>
-          <img src="images/2Km-Pinot Noir.jpeg" alt="2km" class="product_img" />
+          <img src="images/productImages/2Km-Pinot Noir.jpeg" alt="2km" class="product_img" />
           <div class="main-article">
             <h4 class="description">2KM Pinot Noir</h4>
             <p class="price">$3.000</p>
@@ -14,7 +14,7 @@
 
         <article>
           <img
-            src="images/Luigi Bosca-Pinot Noir.jpeg"
+            src="images/productImages/Luigi Bosca-Pinot Noir.jpeg"
             alt="Luigi Bosca"
             class="product_img"
           />
@@ -26,7 +26,7 @@
 
         <article>
           <img
-            src="images/Serbal-Pinot Noir.jpeg"
+            src="images/productImages/Serbal-Pinot Noir.jpeg"
             alt="Serbal"
             class="product_img"
           />
