--- a/src/views/products/products.ejs
+++ b/src/views/products/products.ejs
@@ -28,7 +28,7 @@
                                 <div class="div-producto">
 
                                     <div class="imagen-producto">
-                                        <img src="/images/<%= product.image%>" alt="Imagen de <%= product.name%>" class="imagen-producto">
+                                        <img src="/images/productImages/<%= product.image%>" alt="Imagen de <%= product.name%>" class="imagen-producto">
                                     </div>
 
                                     <div class="detalles">
